<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".PlayingActivity">

    <ImageView
        android:id="@+id/song_image"
        android:layout_width="@dimen/playingSongImageSize"
        android:layout_height="@dimen/playingSongImageSize"
        android:contentDescription="@string/songImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        app:srcCompat="@drawable/ic_music_note_256dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/appBackground"
        android:orientation="vertical"
        android:padding="@dimen/smallPadding"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:gravity="bottom"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="Artist" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="Song Name" />
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="410dp"
        android:layout_height="112dp"
        android:background="@color/tabLayoutColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="429dp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:progressTint="@color/colorAccent"
        android:thumbTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.27" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/previous"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:srcCompat="@drawable/ic_skip_previous_48dp" />

        <ImageView
            android:id="@+id/playing_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/pause"
            app:srcCompat="@drawable/ic_pause_circle_filled_72dp" />

        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/next"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:srcCompat="@drawable/ic_skip_next_48dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>